fix text alignment on tasks

--- a/src/style.css
+++ b/src/style.css
@@ -175,7 +175,8 @@
 #taskDiv div .nameContainer {
     display: grid;
     grid-template-rows: 1fr 1fr;
-    justify-content: start;
+    justify-items: start;
+    gap: .5rem;
 }
 
 #taskDiv div .material-icons {
@@ -198,7 +199,6 @@
     color-scheme: dark;
     font-size: .8rem;
     width: 65%;
-    margin-left: 13px;
 }
 
 #taskDiv div .taskPrio {
